# event-system

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  codecov.yaml
.github/workflows/: ubuntu.yml  windows.yml
include/: event-system.hpp
test/: CMakeLists.txt
test/src/: main.cpp
